[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scene/PlayerPlatform.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scene/menu/FadeIn.tscn" type="PackedScene" id=2]
[ext_resource path="res://Level1.tres" type="TileSet" id=3]
[ext_resource path="res://Scene/Door.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scene/StaticCamera.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scene/Level2.gd" type="Script" id=6]

[node name="Level2" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 160, 96 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
format = 1
tile_data = PoolIntArray( -65527, 0, 0, -65526, 0, 0, 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 65536, 0, 0, 65555, 0, 0, 131072, 0, 0, 131091, 0, 0, 196608, 0, 0, 196627, 0, 0, 262144, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 0, 0, 262154, 0, 0, 262155, 0, 0, 262156, 0, 0, 262163, 0, 0, 327680, 0, 0, 327699, 0, 0, 393216, 0, 0, 393235, 0, 0, 458752, 0, 0, 458771, 0, 0, 524288, 0, 0, 524307, 0, 0, 589824, 0, 0, 589843, 0, 0, 655360, 0, 0, 655379, 0, 0, 720896, 0, 0, 720897, 0, 0, 720898, 0, 0, 720899, 0, 0, 720900, 0, 0, 720901, 0, 0, 720902, 0, 0, 720903, 0, 0, 720904, 0, 0, 720907, 0, 0, 720908, 0, 0, 720909, 0, 0, 720910, 0, 0, 720911, 0, 0, 720912, 0, 0, 720913, 0, 0, 720914, 0, 0, 720915, 0, 0 )

[node name="FadeIn" parent="." instance=ExtResource( 2 )]
visible = false

[node name="Enter" parent="." instance=ExtResource( 4 )]
position = Vector2( 160, 8 )
scale = Vector2( 2, 1 )

[node name="Exit" parent="." instance=ExtResource( 4 )]
position = Vector2( 160, 184 )
scale = Vector2( 2, 1 )

[node name="Camera2D" parent="." instance=ExtResource( 5 )]
[connection signal="fade_finished" from="FadeIn" to="." method="_on_FadeIn_fade_finished"]
[connection signal="body_entered" from="Exit" to="." method="_on_Exit_body_entered"]
